Feature/ad 4768 condition code and key combination (#17)
* Renamed from TitleType to ConditionCode. Added condition object to be used in determine what condition code and key combination to use.

* Working on Drools rule engine.

* KieContainer now builds correctly and unit tests are running.

* Added new rules.

* Renamed files, added service and controller functions.

* Some character problems in the drl file invalidated matches. Cleaned up the file and tests now gets at least som results.

* Added suggestion for price offer service and controller.

* Unit tests for condition code and key combination.

* Working on unit test for combined code and key combinations.

* Fixed failing tests.
